# vargs

./: .clang-format  .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  NOTICE  README.md  ztd.vargs.pc.in
cmake/: ztd.vargs-config.cmake.in
documentation/: CMakeLists.txt  Doxyfile.in
documentation/source/: api.rst  architectures.rst  conf.py  genindex.rst  index.rst  license.rst
documentation/source/_static/: inline_removal.js
documentation/source/architectures/vc++/: x64.rst
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/source/: mul.cpp
include/ztd/: vargs.h  vargs.hpp
include/ztd/vargs/: va_intrinsics.h  va_list.h  version.h
include/ztd/vargs/detail/: broad_type.h  function_properties.h
single/: CMakeLists.txt
source/ztd/vargs/: stub.hpp  va_end.cpp  va_next.va_start.cpp
source/ztd/vargs/detail/: function_properties.c
source/ztd/vargs/mingw/: x64.hpp
source/ztd/vargs/systemv/: x64.hpp
source/ztd/vargs/vc++/: x64.asm  x64.hpp
source/ztd/vargs/windows/: x64.asm  x64.hpp
source/ztd/vargs/windows/gcc/: x64.hpp
source/ztd/vargs/windows/vc++/: x64.hpp
tests/: CMakeLists.txt
tests/basic_run_time_c++/: CMakeLists.txt
tests/basic_run_time_c++/source/: all_floats.cpp  all_integers.cpp  all_struct.cpp  main.cpp
tests/inclusion/: CMakeLists.txt
tests/inclusion/source/: main.c
tests/inclusion/source/ztd/: vargs.c
tests/inclusion_as_c++/: CMakeLists.txt
tests/inclusion_as_c++/source/: main.cpp
tests/inclusion_as_c++/source/ztd/: vargs.cpp
